--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+#General gem ignore paths
 *.gem
 *.rbc
 .bundle
@@ -20,3 +21,32 @@ tmp
 *.o
 *.a
 mkmf.log
+
+# OS X
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+# Thumbnails
+._*
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# Windows
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+# Folder config file
+Desktop.ini
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+
+# Sublime
+# SublimeText workspace
+*.sublime-workspace
+
+#oh my zsh plugin file
+.rake_tasks
+.cap_tasks*
